--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="head/favicon.ico">
     <script type="module" crossorigin src="index.js"></script>
     <link rel="stylesheet" href="index.css">
+    <meta name="google-site-verification" content="K6XORG-rY7z6uFuT21I11bQr9NI_Swk9o_EY_pGoxE0" />
 </head>
 
 <body>
